force-app/main/default/objects/Payment_Method__c/Payment_Method__c.object-meta.xml
<CustomObject>
    <label>Payment Method</label>
    <nameField>
        <displayFormat>PM-{000000}</displayFormat>
        <label>Payment Method Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payments Method</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>