force-app/main/default/objects/Payment_Method__c/fields/Card_Brand__c.field-meta.xml
<CustomField>
    <fullName>Card_Brand__c</fullName>
    <label>Card Brand</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Visa</fullName>
            </value>
            <value>
                <fullName>Mastercard</fullName>
            </value>
            <value>
                <fullName>Amex</fullName>
            </value>
            <value>
                <fullName>Discover</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>