force-app/main/default/objects/Payment_Method__c/fields/Gateway_Token__c.field-meta.xml
<CustomField>
    <fullName>Gateway_Token__c</fullName>
    <label>Gateway Token</label>
    <length>175</length>
    <maskChar>X</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>